Fix page height on iOS devices
Footer was being hidden below the bottom control bar on Mobile Safari.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -24,11 +24,19 @@
   }
 }
 
+html {
+  min-height: 100vh;
+}
+
 body {
   background-color: var(--background-color);
   color: var(--text-color);
   display: flex;
   justify-content: flex-end;
+  min-height: 100%;
+  min-height: -moz-available;
+  min-height: -webkit-fill-available;
+  min-height: fill-available;
   font-family: "Bitter";
   padding: 3rem 2rem;
   max-width: 45rem;
